audioparsers: use ACCEPT_INTERSECT flag

The parser can accept input that is not completely specified. Use the
ACCEPT_INTERSECT flag on the sinkpad to tweak the acceptcaps function to
check for intersection only. This allows us to proxy downstream
constraints while still allowing non-subset caps as input.
We can then also remove the appended template caps workaround.
Make a unit-test to check the new feature.

This reverts commit 26040ee38cb9e7c42f3d9a0282b3e5cace7ca42d

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=705024